1603.	[perf]		tmark
	High Availability now registers its HTTP sockets with Interface
	Manager's main thread allowing the thread can monitor them for
	IO readiness. This should improve the responsiveness of HA peers
	to each other.
	(Gitlab #691,!395, git 4a0b024bc6d83b26fe702d95ee7ce0c914b37d8e)

1602.	[func]		fdupont
	Added more information to sanity-checker log messages.
	(Gitlab #685,!392, git 5367cd1196662739bbff5e99072ab6a55cfb0489)

1601.	[func]		fdupont
	Kea servers now add the lease validity lifetime to informational
	lease allocation log messages.
	(Gitlan #694,!399, git cb29b532cf1f8790f9752d7e8253b0aa31ce05e6)

1600.	[bug]		fdupont
	Fixed prefixLengthFromRange() routine.
	(Gitlab #583.!377, git 10bd31217d8a0a77345c4cba7a59314f70c1b509)

1599.	[perf]		marcin
	Improved performance of the DHCPv6 server running with High
	Availability by aggregating multiple lease updates in a single
	lease6-bulk-apply command instead of generating multiple
	lease6-update commands, one for each allocated lease.
	(Gitlab #689,!394, git 65021b840b94da3d118e541fba5469c8ed15175b)

1598.	[bug]		razvan
	Added unittests for long (> 65536 chars) tokens in parsed configs
	so any crash related to parsers could be detected.
	(Gitlab #604,!376, git 811735b67fcdb5592c3e020792c154f2f454259c)

1597.	[func]		fdupont
	Added new configuration parameters for handling user lease
	time hints to kea-dhcp4: min-valid-lifetime and max-valid-lifetime;
	and to kea-dhcp6: min-preferred-lifetime, max-preferred-lifetime,
	min-valid-lifetime, and max-valid-lifetime.
	(Gitlab #295,!325, git 8641448c4106bf28ea32df72e5e0ad520d3946ae)

1596.	[func]		marcin
	Implemented lease6-bulk-apply command in the lease_cmds hooks
	library.
	(Gitlab #683,!390, git 122473c18b632ddfa22b8a48f6d9399bc18e2598)

1595.	[func]		fdupont
	Removed unused t1_ and t2_ members from internal lease class.
	(Gitlab #567,!357, 6072db5f4ca6cfa9573152c255f97dd170acbd57)

1594.	[bug]		fdupont