@@ -1,4 +1,4 @@
-// File created from ../../../src/bin/dhcp6/dhcp6_messages.mes on Wed Jun 26 2019 12:07
+// File created from ../../../src/bin/dhcp6/dhcp6_messages.mes on Thu Jun 27 2019 19:57
 
 #ifndef DHCP6_MESSAGES_H
 #define DHCP6_MESSAGES_H
